Authentication and UserRepository Changes

--- a/OrderProyectAPI/appsettings.json
+++ b/OrderProyectAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=OrdersDB.db"
+  },
+  "AuthenticationService": {
+    "SecretForKey": "thisisthesecretforgeneratingakey(mustbeatleast32bitlong)",
+    "Issuer": "https://localhost:7169",
+    "Audience": "orderapi"
   }
 }
